# tpl_python_package

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  tox.ini
docs/source/: api.rst  conf.py  index.rst  usage.rst
requirements/: dev.in  dev.txt  docs.txt  lint.txt  tests.txt  typing.txt
src/my_package/: __init__.py  main.py
tests/: conftest.py  test_sample.py
