# For more info about toml format, look at
# https://toml.io/en/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
authors = [
  { name="rotoclap", email="rotoclap@gmail.com" },
]
description = "<Insert a description>"
license = {file = "LICENSE"}
requires-python = ">=3.8"

dynamic = ["version", "readme"]

# For more info about classifiers, loot at
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
keywords = ["<keyword1>", "<keyword2>", "<keyword3>"]

# List here all needed packages
dependencies = []

[project.urls]
Homepage = "<usually the github URL of the project>"
Documentation = "<URL of the documentation on Read the Docs>"
Issues = "<usually the github URL of the project issues page>"

[project.scripts]
#entry_point = "my_package.module:function"

[tool.setuptools.package-data]
cagip = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "my_package.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "slow: mark test as slow to run"
]