# For more info about toml format, look at
# https://toml.io/en/

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  { name="rotoclap", email="rotoclap@gmail.com" },
]
# For more info about classifiers, loot at
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
# List here all needed packages
dependencies = []
description = "<Insert a description>"
dynamic = ["version", "readme"]
keywords = ["<keyword1>", "<keyword2>", "<keyword3>"]
license = {file = "LICENSE"}
name = "my_package"
requires-python = ">=3.8"

[project.scripts]
#entry_point = "my_package.module:function"

[project.urls]
Homepage = "<usually the github URL of the project>"
Documentation = "<URL of the documentation on Read the Docs>"
Issues = "<usually the github URL of the project issues page>"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = ["my_package", "tests"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = ["slow: mark test as slow to run"]

[tool.setuptools.package-data]
cagip = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "my_package.__version__"}
