# For more info about toml format, look at
# https://toml.io/en/

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "my_package"
version = "1.7.0"
authors = [
  { name="rotoclap", email="rotoclap@gmail.com" },
]
description = "<Insert a description>"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

# For more info about classifiers, loot at
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
keywords = ["<keyword1>", "<keyword2>", "<keyword3>"]

# List here all needed packages
dependencies = []

[dependency-groups]
build = [
    "nuitka>=2.8.9",
]
dev = [
    "pytest>=8.3.5",
    "rich>=14.2.0",
]
test = [
    "covdefaults>=2.3.0",
    "mypy>=1.14.1",
    "pytest-cov>=5.0.0",
]

[project.scripts]
#entry_point = "my_package.module:function"

[project.urls]
Homepage = "<usually the github URL of the project>"
Documentation = "<URL of the documentation on Read the Docs>"
Issues = "<usually the github URL of the project issues page>"

[tool.coverage.run]
plugins = [
    "covdefaults"
]

[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = ["slow: mark test as slow to run"]
